feat(core-function): 优化功能点批量生成逻辑
- 引入JpowerProperties判断服务启动类型
- 调整功能点获取逻辑，支持本地静态与远程请求两种方式
- 优化功能点解析与去重处理，避免重复存储
- 增强功能点父子关系维护，确保层级结构正确
- 按照父级存在性分批保存新功能点
- 清理功能点缓存以保证数据最新性